Started working on the dissertation

--- a/dissertation/template.tex
+++ b/dissertation/template.tex
@@ -11,9 +11,9 @@
 
 %==============================================================================
 %% METADATA
-\title{A Seamful Game Based on GPS Shadows}
-\author{Robbert Malcolm Sinclair}
-\date{14 October 2022}
+\title{Level 4 Project Report Template}
+\author{John H. Williamson}
+\date{September 14, 2018}
 
 \maketitle
 
@@ -39,8 +39,8 @@
 % Please note that you are under no obligation to sign 
 % this declaration, but doing so would help future students.
 %
-\def\consentname {Robbert Malcolm Sinclair} % your full name
-\def\consentdate {14 October 2022} % the date you agree
+%\def\consentname {My Name} % your full name
+%\def\consentdate {20 March 2018} % the date you agree
 %
 \educationalconsent
 
@@ -170,11 +170,6 @@ What did other people do, and how is it relevant to what you want to do?
 
 %==================================================================================================================================
 \chapter{Analysis/Requirements}
-In this section I go over the main process that I used to come up with a design for the game
-
-\section{Creating an app to get GPS locations}
-Since I didn't have much knowledge of mobile app development. I gathered that the best place to start was to make an app that gets a location. I started by doing some research into creating an Android app using Kotlin. The main aim of this app was to get me the latitude and longitude coordinates every second and most importantly, give me the accuracy for the GPS locations. In order to get this up and running quickly. I made use of the FusedLocationProvider API \citep{fused}
-
 What is the problem that you want to solve, and how did you arrive at it?
 \section{Guidance}
 Make it clear how you derived the constrained form of your problem via a clear and logical process. 
