Added some idea pdfs

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -173,7 +173,7 @@ What did other people do, and how is it relevant to what you want to do?
 In this section I go over the main process that I used to come up with a design for the game
 
 \section{Creating an app to get GPS locations}
-Since I didn't have much knowledge of mobile app development. I gathered that the best place to start was to make an app that gets a location. I started by doing some research into creating an Android app using Kotlin. The main aim of this app was to get me the latitude and longitude coordinates every second and most importantly, give me the accuracy for the GPS locations. In order to get this up and running quickly. I made use of the FusedLocationProvider API \citep{fused}
+Since I didn't have much knowledge of mobile app development. I gathered that the best place to start was to make an app that gets a location. I started by doing some research into creating an Android app using Kotlin. The main aim of this app was to get me the latitude and longitude coordinates every second and most importantly, give me the accuracy for the GPS locations. In order to get this up and running quickly. I made use of the FusedLocationProvider API \citep{fused}.
 
 What is the problem that you want to solve, and how did you arrive at it?
 \section{Guidance}
