Added a brief section introducing GPS

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -44,3 +44,20 @@
   year={1968},
   publisher={Harcourt, Brace, Javanovich}
 }
+
+@book{Rabbany2006,
+   author = {Ahmed El-Rabbany},
+   edition = {2nd},
+   isbn = {978-1-59693-016-2},
+   publisher = {Artech House, INC.},
+   title = {Introduction to GPS: The Global Positioning System},
+   year = {2006},
+}
+
+@article{spsStandard,
+   author = {US Govt Department for Defense},
+   month = {4},
+   title = {2020-SPS-performance-standard},
+   url = {https://www.gps.gov/technical/ps/2020-SPS-performance-standard.pdf},
+   year = {2020},
+}
