Updated my timesheet

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -44,3 +44,29 @@
   year={1968},
   publisher={Harcourt, Brace, Javanovich}
 }
+
+@misc{fused,
+    title={Fused Location Provider API},
+    author={{Google}},
+    howpublished={\url{https://developers.google.com/location-context/fused-location-provider}},
+    urldate={2022-10-14},
+    year={2022}
+}
+
+@film{Chase2022,
+   author = {Adam Chase and Sam Denby and Ben Doyle},
+   month = {9},
+   publisher = {YouTube},
+   title = {Jet Lag: The Game: We Played a 72 hour game across Europe},
+   url = {https://www.youtube.com/watch?v=q2tJqO6nCSc},
+   year = {2022},
+}
+
+@article{sps-standard,
+   author={{US Govt Department for Defence}},
+   organisation={U.S. {S}pace {F}orce},
+   month = {4},
+   title = {Global Positioning System Service Performance Standard 5th Edition},
+   url = {https://www.gps.gov/technical/ps/2020-SPS-performance-standard.pdf},
+   year = {2020},
+}
