--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -153,6 +153,13 @@ If you are unsure about how to cite online sources, please see this guide: \url{
 
 %==================================================================================================================================
 \chapter{Background}
+
+In this chapter I will go over some of the foundational concepts required to understnad the background of the project
+
+\section{What is GPS}
+GPS stands for the Global Positioning System. It is one of the most famous forms of Global Navigation Satellite Systems (GNSS) systems which is owed by the US government. There are three segments to GPS
+but the most important segment to understand is the Space Segment. 
+
 What did other people do, and how is it relevant to what you want to do?
 \section{Guidance}
 \begin{itemize}    
