Added more sources

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -45,7 +45,6 @@
   publisher={Harcourt, Brace, Javanovich}
 }
 
-<<<<<<< HEAD
 @misc{fused,
     title={Fused Location Provider API},
     author={{Google}},
@@ -73,9 +72,42 @@
 }
 
 @article{spsStandard,
-   author = {US Govt Department for Defense},
+   author = {{US Govt Department of Defense}},
    month = {4},
-   title = {2020-SPS-performance-standard},
+   title = {Global Positioning System Standard Positioning Service Performance Standard},
    url = {https://www.gps.gov/technical/ps/2020-SPS-performance-standard.pdf},
    year = {2020},
+}
+
+@incollection{Oxley2017,
+   author = {Alan Oxley},
+   doi = {10.1016/B978-0-12-809594-2.00008-3},
+   booktitle = {Uncertainties in GPS Positioning},
+   pages = {99-114},
+   publisher = {Elsevier},
+   title = {Sources of Inaccuracy},
+   year = {2017},
+}
+
+@book{Xu2016,
+   abstract = {This reference and handbook describes theory, algorithms and applications of the Global Positioning System (GPS/Glonass/Galileo/Compass). It is primarily based on source-code descriptions of the KSGsoft program developed at the GFZ in Potsdam. The theory and algorithms are extended and verified for a new development of a multi-functional GPS/Galileo software. Besides the concepts such as the unified GPS data processing method, the diagonalisation algorithm, the adaptive Kalman filter, the general ambiguity search criteria, and the algebraic solution of variation equation reported in the first edition, the equivalence theorem of the GPS algorithms, the independent parameterisation method, and the alternative solar radiation model reported in the second edition, the modernisation of the GNSS system, the new development of the theory and algorithms, and research in broad applications are supplemented in this new edition. Mathematically rigorous, the book begins with the introduction, the basics of coordinate and time systems and satellite orbits, as well as GPS observables, and deals with topics such as physical influences, observation equations and their parameterisation, adjustment and filtering, ambiguity resolution, software development and data processing and the determination of perturbed orbits.},
+   author = {Guochang Xu and Yan Xu},
+   doi = {10.1007/978-3-662-50367-6},
+   isbn = {9783662503676},
+   journal = {GPS: Theory, Algorithms and Applications, Third Edition},
+   month = {1},
+   pages = {1-489},
+   publisher = {Springer Berlin Heidelberg},
+   title = {GPS: Theory, algorithms and applications, third edition},
+   year = {2016},
+}
+
+@incollection{Barkhuus2005,
+   author = {Louise Barkhuus and Matthew Chalmers and Paul Tennent and Malcolm Hall and Marek Bell and Scott Sherwood and Barry Brown},
+   doi = {10.1007/11551201_21},
+   booktitle = {Lecture Notes in Computer Science},
+   pages = {358-374},
+   publisher = {University of Glasgow},
+   title = {Picking Pockets on the Lawn: The Development of Tactics and Strategies in a Mobile Game},
+   year = {2005},
 }
