--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -160,9 +160,9 @@ In this chapter I will go over some of the foundational concepts required to und
 
 The Global Positioning System also known as GPS is one of the worlds most famous GNSS systems. It allows people to determine their
 location from anywhere around the world at any time. GPS has three main phases, the space phase, the control phase and the user phase.
-In the space phase, the earth is split up into 24 "slots" which should be filled up by an operational satellite \cite{spsStandard}. Therefore
+In the space phase, the earth is split up into 24 "slots" which should be filled up by an operational satellite \citep{spsStandard}. Therefore
 the GPS constellation is made up of at least 24 satellites. In an ideal situation a user should have access to at least 4 of the satellites
-at any one time \cite{Rabbany2006}. The satellites send down radio signals in which GPS receivers can get through an antenna.
+at any one time \citep{Rabbany2006}. The satellites send down radio signals in which GPS receivers can get through an antenna.
 
 %TODO - Add a source and paragraph about how GPS is calculated
 
