Added an NMEA sentance function to the GPS app

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -79,13 +79,14 @@
    year = {2020},
 }
 
-@incollection{Oxley2017,
+@inbook{Oxley2017,
    author = {Alan Oxley},
    doi = {10.1016/B978-0-12-809594-2.00008-3},
    booktitle = {Uncertainties in GPS Positioning},
    pages = {99-114},
    publisher = {Elsevier},
    title = {Sources of Inaccuracy},
+   chapter={8},
    year = {2017},
 }
 
