--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -220,18 +220,24 @@ explain why I had a lot of shadow areas when I walked around Kelvingrove Park, a
     \centering
     \includegraphics[width=0.6\linewidth]{images/fused_histogram.pdf}    
 
-    \caption{Histogram showing the ranges of accuracy (in meters) of location points picked up by the mobile application}
+    \caption{Histogram showing the ranges of accuracy (in meters) of location points picked up by the FusedLocationProvider API}
 
     % use the notation fig:name to cross reference a figure
     \label{fig:fusedhist} 
 \end{figure}
 
-
-
-
 \subsection{LocationManger API}
+Since the FusedLocationProvider wasn't appropriate for the project, I needed to find an API that would give me location data based purely on GPS
 
-What is the problem that you want to solve, and how did you arrive at it?
+\begin{figure}
+    \centering
+    \includegraphics[width=0.6\linewidth]{images/mongo_db_histogram.png}
+
+    \caption{Histogram showing the ranges of accuracy (in meters) of location points picked up by the LocaitonManager API}
+
+    \label{fig:mongohist}
+\end{figure}
+
 \section{Guidance}
 Make it clear how you derived the constrained form of your problem via a clear and logical process. 
 
