Wrote up the LocationManager paragraph

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -46,11 +46,19 @@
 }
 
 @misc{fused,
-    title={Fused Location Provider API},
+    title={{Fused Location Provider API}},
     author={{Google}},
     howpublished={\url{https://developers.google.com/location-context/fused-location-provider}},
     urldate={2022-10-14},
     year={2022}
+}
+
+@misc{locationManager,
+       title={{LocationManager API}},
+       author={{Google Developers}},
+       howpublished={\url{https://developer.android.com/reference/android/location/LocationManager}},
+       urldate={2022-12-04},
+       year={2022}
 }
 
 @film{Chase2022,
