Started on the status report

--- a/status_report/status_report.tex
+++ b/status_report/status_report.tex
@@ -3,8 +3,8 @@
 \usepackage{times}
     \usepackage{fullpage}
     
-    \title{ {{cookiecutter.project_title}}
-    \author{ {{cookiecutter.student_name}} - {{cookiecutter.student_id}} }
+    \title{ A seamful game based on GPS Shadows }
+    \author{ Robbert Malcolm Sinclair - 2432710S }
 
     \begin{document}
     \maketitle
@@ -18,8 +18,13 @@
 
 \subsubsection{Motivation}\label{motivation}
 
-\emph{{[}Clearly motivate the purpose of your project; why someone would
-care about what you are doing{]}}
+%\emph{{[}Clearly motivate the purpose of your project; why someone would
+%care about what you are doing{]}}
+
+The Global Positioning System or GPS has had a huge impact on our daily lives. It helps us navigate around unfamiliar areas with ease. While GPS is accurate most of the time, there
+are some areas like in buildings or under bridges where the accuracy can decrease. This is what we refer to as a GPS Shadow. Seamful design is the idea of making what might be
+a problem or frustrating as a benefit to the product. 
+
 
 \subsubsection{Aims}\label{aims}
 
@@ -30,6 +35,14 @@ succeeded{]}}
 \subsection{Progress}\label{progress}
 
 \emph{{[}Briefly state your progress so far, as a bulleted list{]}}
+
+\begin{itemize}
+    \tightlist
+\item Decided on a Technology Stack. Android Phone app on the frontend with a Node.js server and MongoDB database. 
+\item Created a Logging app which created a dataset of GPS Shadows around the Glasgow University Campus
+\item Came up with some small designs of game ideas
+\item Started to make 
+\end{itemize}
 
 \subsection{Problems and risks}\label{problems-and-risks}
 
