Updated the status_report.tex

--- a/status_report/status_report.tex
+++ b/status_report/status_report.tex
@@ -32,6 +32,10 @@ a problem or frustrating as a benefit to the product.
 be something which is measurable; it should be possible to tell if you
 succeeded{]}}
 
+The project brief is to create a seamful game utilising areas where GPS Shadows are prevelant. Players will be able to use drops in GPS quality to hide in several different areas
+from players wishing to catch them. One of the aims of this game is to show where their signal from a GPS device will drop in quality, for example in buldings or under bridges etc.
+Once you know where there are GPS Shadows it should hopefully inform them of a good strategy to use when looking for hiding places.
+
 \subsection{Progress}\label{progress}
 
 \begin{itemize}
@@ -76,16 +80,13 @@ mitigate them?{]}}
 
 \subsection{Plan}\label{plan}
 
-\emph{{[}Time plan, in roughly weekly to monthly blocks, up until
-submission week{]}}
-
 \begin{itemize}
     \tightlist
     \item \textbf{Christmas Holidays} Finish a bare minimum minimum viable product tag game. Prepare Evaluation for the game
     \item \textbf{Weeks 1-2} Aim to have a first evaluation on the minimum game around this time
     \item \textbf{Weeks 3-6} Code up improvements to the game as discussed in the evaluation
     \item \textbf{Weeks 6-7} Evaluation of the final game
-    \item \textbf{Weeks 8-11} Write Up 
+    \item \textbf{Weeks 8-11} Write Up and final submission of the project.
 \end{itemize}
 
 
