Wrote a new part of the dissertation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -120,3 +120,21 @@
    title = {Picking Pockets on the Lawn: The Development of Tactics and Strategies in a Mobile Game},
    year = {2005},
 }
+
+@incollection{Kleusberg1990,
+   author = {Alfred Kleusberg and Richard B. Langley},
+   journal = {GPS World March/April 1990},
+   month = {3},
+   pages = {50-52},
+   title = {The Limitations of GPS},
+   year = {1990},
+}
+
+@inproceedings{Indoor2010,
+   author = {Mikkel Baun Kjærgaard and Henrik Blunck and Torben Godsk and Thomas Toftkjær and Dan Lund Christensen and Kaj Grønbæk},
+   doi = {10.1007/978-3-642-12654-3_3},
+   journal = {Pervasive 2010: Pervasive Computing},
+   pages = {38-56},
+   title = {Indoor Positioning Using GPS Revisited},
+   year = {2010},
+}
