Added updates to the server

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -93,7 +93,7 @@
    booktitle = {Uncertainties in GPS Positioning},
    pages = {99-114},
    publisher = {Elsevier},
-   title = {Sources of Inaccuracy},
+   title = {Sources of {I}naccuracy},
    chapter={8},
    year = {2017},
 }
@@ -103,7 +103,7 @@
    author = {Guochang Xu and Yan Xu},
    doi = {10.1007/978-3-662-50367-6},
    isbn = {9783662503676},
-   journal = {GPS: Theory, Algorithms and Applications, Third Edition},
+   journal = {{GPS}: {T}heory, {A}lgorithms and {A}pplications, {T}hird {E}dition},
    month = {1},
    pages = {1-489},
    publisher = {Springer Berlin Heidelberg},
@@ -123,18 +123,19 @@
 
 @incollection{Kleusberg1990,
    author = {Alfred Kleusberg and Richard B. Langley},
-   journal = {GPS World March/April 1990},
+   booktitle = {GPS World March/April 1990},
    month = {3},
    pages = {50-52},
-   title = {The Limitations of GPS},
+   title = {The Limitations of {GPS}},
    year = {1990},
 }
 
-@inproceedings{Indoor2010,
+@incollection{Indoor2010,
    author = {Mikkel Baun Kjærgaard and Henrik Blunck and Torben Godsk and Thomas Toftkjær and Dan Lund Christensen and Kaj Grønbæk},
    doi = {10.1007/978-3-642-12654-3_3},
-   journal = {Pervasive 2010: Pervasive Computing},
+   booktitle = {Pervasive 2010: Pervasive Computing},
    pages = {38-56},
    title = {Indoor Positioning Using GPS Revisited},
+   publisher = {Springer},
    year = {2010},
 }
