--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -185,13 +185,13 @@ The first form of GPS error is a clock error. Each satellite sends signals down 
 slight delay. This delay will be small (a few nanoseconds long) but will accumulate over time. One of the main reasons why this can lead to
 a decrease in accuracy is that the receiver may get a time on the clock which is off the actual time on the satellites clock. This can lead to
 a slight change of position. This form of error is common with most GPS signals. A typical GPS Receiver can also be a cause for this problem as it 
-has a crystal clock which is not as precise than the cesium atomic clocks on the satellites \citep{Rabbanay2006, Kleusberg1990}. While this
+has a crystal clock which is not as precise than the cesium atomic clocks on the satellites \citep{Rabbany2006, Kleusberg1990}. While this
 form of error is a common cause of problem with GPS accuracy, there isn't a lot of game opportunities due to the fact that the player
 can't really control when a clock error is to happen.
 
 \subsection{GPS Signal Reception}
 GPS signals are in the form of radio waves which can be blocked by obstacles on the way to a GPS sensor. When signals hit a specific obstable
-the signals decrese in quality during a process known as attenuation \citep{Indoors2010}. Some examples of such obstacles include
+the signals decrese in quality during a process known as attenuation \citep{Indoor2010}. Some examples of such obstacles include
 building walls, soil and water. \citep{Kleusberg1990}. Eventually the GNSS receiver will receive more noise
 than the original signal which leads to an inaccurate signal. A good signal is received when the receiver has a good signal from at least 4
 satellites. Therefore in urban areas with high rise buildings, one or more satellites could be obstructed. If a game was to be made
